# OpenAI-Agents-SDK

./: README.md
00_Docs/01_AgenticAI/: readme.md
00_Docs/02_Core_Concepts_OpenAI-Agents-SDK/: README.md
00_Docs/03_swarm_anthropic_pattern/: readme.md
00_Docs/04_Agents_Class/: readme.md
00_inner_working/: BackendProcessor.py
01_inner_working/: Specific_Spans.py  TraceProcessor.py  pyproject.toml  verbos.py
agents_sdk/: basic_agent.py  main.py  pyproject.toml
clas_02/: pyproject.toml
class_01/00_hello_agent/: README.md  main.py  pyproject.toml
class_01/01_uv/: README.md  pyproject.toml
class_01/01_uv/src/hello_op_og/: __init__.py
class_01/02_chainlit/: README.md  pyproject.toml
class_01/02_chainlit/src/02_chainlit/: __init__.py  chatbot.py
class_02/: hello.py
class_03/python_syntax/: 01_basic_dataclasses.py  02_nested_dataclasses.py  03_alt_inheritance.py  03_inheritance_dataclasses.py  03_simple_inheritance.py  04_immutable_dataclasses.py  05_large_data_dataclasses.py  05_simple_dataset.py  06_dataclass_utilities.py  07_dataclass_with_pydantic.py  alt_output.txt  dataclass_file_output.py  output.txt  (+5 more)
class_05/: Readme.md
class_06/: main.py  pyproject.toml
class_08/: main.py  pyproject.toml
class_10/: main.ipynb  main.py  pyproject.toml  readme.md
class_11/: chat_completions.ipynb  chat_completions.py  pyproject.toml
class_12/: litellm.ipynb  main.py  pyproject.toml
class_13/: main.ipynb  main.py  pyproject.toml
inner_working/: BackendProcessor.py
inner_working_00/: main.py
prompt_context_engineering/: prompt_and_context_eng.md
(+3 files in other folders)
