[project]
name = "hello-op-og"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shahid Ali", email = "153486921+shahidali54@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hello-op-og = "hello_op_og:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
