[project]
name = "02-chainlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shahid Ali", email = "153486921+shahidali54@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
]

[project.scripts]
02-chainlit = "02_chainlit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
